--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>myproject</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-
+    <!-- TESTING A DETACHD HEAD -->
     <dependencies>
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
